api/openapi-spec/deploy/serivce.yaml
apiVersion: v1
kind: Service
metadata:
  name: swagger-ui
  namespace: certify-d-dev
spec:
  selector:
    app: swagger-ui
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
